@@ -1,4 +1,4 @@
-package bbejeck.chapter_4.multi_event;
+package bbejeck.chapter_4.multi_event.proto;
 
 import bbejeck.chapter_4.proto.EventsProto;
 import bbejeck.chapter_4.proto.LoginEventProto;
@@ -12,18 +12,26 @@ import org.apache.logging.log4j.Logger;
 
 import java.time.Duration;
 import java.util.ArrayList;
-import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 /**
- * User: Bill Bejeck
- * Date: 1/18/21
- * Time: 6:53 PM
+ * Producer client for multiple events in one topic using Protobuf
+ *    Individual Schemas used for this class are
+ *    <ol>
+ *        <li>login_event.proto</li>
+ *        <li>search_event.proto</li>
+ *        <li>purchase_event.proto</li>
+ *    </ol>
+ *    And the schema containing the oneof field is events.proto
+ *
+ *   All Proto schemas are located in src/main/proto
+ *
+ *   To run this class execute MultiEventProtoProduceConsumeTest
  */
-public class MultiEventConsumerClient {
+public class MultiEventProtoConsumerClient {
 
-    private static final Logger LOG = LogManager.getLogger(MultiEventConsumerClient.class);
+    private static final Logger LOG = LogManager.getLogger(MultiEventProtoConsumerClient.class);
     private boolean runOnce = false;
     final Map<String,Object> consumerConfigs;
     volatile boolean keepConsuming = true;
@@ -33,13 +41,13 @@ public class MultiEventConsumerClient {
     List<SearchEventProto.SearchEvent> searches = new ArrayList<>();
     List<EventsProto.Events> eventsList = new ArrayList<>();
 
-    public MultiEventConsumerClient(final Map<String,Object> consumerConfigs) {
+    public MultiEventProtoConsumerClient(final Map<String,Object> consumerConfigs) {
         this.consumerConfigs = consumerConfigs;
     }
 
     public void runConsumer() {
         LOG.info("Starting runConsumer method using properties {}", consumerConfigs);
-        List<String> topicNames = Arrays.asList(((String)consumerConfigs.get("topic.names")).split(","));
+        var topicNames = List.of(((String)consumerConfigs.get("topic.names")).split(","));
         try (final Consumer<String, EventsProto.Events> consumer = new KafkaConsumer<>(consumerConfigs)) {
             LOG.info("Subscribing to {}", topicNames);
             consumer.subscribe(topicNames);
